--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,18 @@
-html, body, .root {
-  height: 100%;
-}
-
-body {
-  line-height: 1.5;
-}
-
-body, .app {
-  background: white;
-}
 
 /* main page */
 
 .app{
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+   text-align: center;
+  /* justify-content: center;
+  align-items: center; */
 }
 .naijakids-title {
-  padding: 10px 0;
+  padding: 10px 0; 
   background: #2e7c31;
-  text-align: center;
+ /* text-align: center; */
 }
 
+h1{
+  font-size: 24px;
+  color: #0ccac4;
+}
